--- a/productsdata.ipynb
+++ b/productsdata.ipynb
@@ -610,9 +610,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dbsession' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\user\\Desktop\\new-crm\\mobile-crm-1\\productsdata.ipynb Cell 17'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/user/Desktop/new-crm/mobile-crm-1/productsdata.ipynb#ch0000016?line=0'>1</a>\u001b[0m c \u001b[39m=\u001b[39m dbsession\u001b[39m.\u001b[39mquery(Categories)\u001b[39m.\u001b[39mfirst()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dbsession' is not defined"
+     ]
+    }
+   ],
    "source": [
     "c = dbsession.query(Categories).first()\n",
     "# pd.read_sql(c.statement, dbsession.connection())"
@@ -648,10 +660,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "6b0033a27a866da95c7b76ad0e068ebca9947a71d63e9fd25a5092b53352d9d0"
+   "hash": "9c4b7b5e11b390a0593606cff19cdf6a9165f466651beab1f538f13053a44d71"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.1 ('.venv': venv)",
+   "display_name": "Python 3.10.4 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -665,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
