--- a/productsdata.ipynb
+++ b/productsdata.ipynb
@@ -660,10 +660,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "9c4b7b5e11b390a0593606cff19cdf6a9165f466651beab1f538f13053a44d71"
+   "hash": "6b0033a27a866da95c7b76ad0e068ebca9947a71d63e9fd25a5092b53352d9d0"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('venv': venv)",
+   "display_name": "Python 3.10.1 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -677,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
